# quantum_computing

./: .gitignore  README.md  main.py  pennylane_tutorial.ipynb  pyproject.toml
qml-introduction/: 1_VQC.ipynb  2_Data_Reuploading.ipynb
