[project]
name = "pennylane"
version = "0.1.0"
description = "This repository is created to host initial projects in quantum computing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pennylane>=0.44.1",
    "pennylane-qiskit>=0.44.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
